tests/errors/tc_expr_syscall_argtype.lx
@module "main"

pub const main -> fn () int {
    __syscall__("hello");
    return 0;
}
